# smesh-sensor-placement

./: .gitignore  LICENSE  README.md  particle_trajectory_simulator.py  pyproject.toml
data/BurnData/DEMs_and_Buffered_Burns/: Buffered_HenryCoe.geojson  Buffered_Malibu.geojson  Buffered_Shasta.geojson  DEM_HenryCoe.tif  DEM_HenryCoe.tif.aux.xml  DEM_HenryCoe_EPSG4326.tif  DEM_HenryCoe_EPSG4326.tif.aux.xml  DEM_Malibu.tif  DEM_Shasta.tif  DEM_Shasta.tif.aux.xml  HenryCoe_Updated.tif  HenryCoe_Updated.tif.aux.xml
data/BurnData/HenryCoe/BurnAreas/: BurnArea1.json  BurnArea2.json  BurnArea3.json  BurnArea4.json  BurnArea5.json  BurnArea6.json  TotalBurnArea.json
data/BurnData/HenryCoe/ReferencePoints/: Reference.json
data/BurnData/HenryCoe/SNodeLocations/: Sim1.json  Sim2.json  Sim3.json
data/BurnData/Malibu/BurnAreas/: BurnArea1.json  BurnArea2.json  BurnArea3.json  (+5 more)
data/FuelConsumptionProfiles/: HenryCoe_Scenarios.csv  Malibu_Scenarios.csv  Shasta_Scenarios.csv
plotly_dashboard/: dashboard.py  data_loader.py  visualization_3d.py
scripts/: get_forecasted_wind.py  get_historic_wind.py  plot_3d_scene.py  simulation_parameters.py
simulation/: __init__.py
simulation/core/: __init__.py  disturbance.py  drift_scene.py  height_distribution.py  plume_model.py  smoke_points.py  terrain_vectors.py  wind_distribution.py  wind_trajectories.py  wind_vectors_2d.py
simulation/scene/: __init__.py  scene_parser.py
simulation/utils/: geo_utils.py  trajectory_utils.py  viz_utils.py
simulation/visualization/: __init__.py  plot_3d_plume.py  plotting.py  plume_plotting.py
(+16 files in other folders)
